# kek-tools

./: .gitignore  Patching.md
data/: show_cov.sh
fuzz/: .clang-format  .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile  a.out  bitmap.c  build.sh  decoding.c  deploy.sh  dispose.c  exception.c  fuzz.c  fuzz_me.sh  fuzz_start.sh  fuzz_target.cpp  gif.c  gif.h  init.c  jni.c  jni.h  nonfuzz.cpp  opengl.c  pwnbois_fuzz  ssh.sh  surface.c
fuzz/analysis-x86/: libpl_x86.idb
fuzz/giflib/: gif_lib.h  openbsd-reallocarray.c
fuzz/kube/: job.yml  run.yml  ssh.yml
fuzz/lib/: jexec
gpu/: CMakeLists.txt  Makefile  fuzz.c  test.cu  test.h
gpu2/: .gitignore  Makefile  smt.cu  smt.h  theory.h  theory.smt
misc/: hook-malloc.js  hook_srtp.py  pyscript.py
modifications/: 2hl.smali
symbols/: modules_and_exports  modules_and_exports_demangled
